--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.1",
+    "@astropub/icons": "^0.2.0",
     "astro": "^4.15.11",
     "gsap": "^3.12.5",
+    "smooth-scrollbar": "^8.8.4",
     "tailwindcss": "^3.4.13"
   }
 }
