--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
     "@astropub/icons": "^0.2.0",
+    "@emailjs/browser": "^4.4.1",
     "astro": "^4.15.11",
     "gsap": "^3.12.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "smooth-scrollbar": "^8.8.4",
     "tailwindcss": "^3.4.13"
   }
