--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "smooth-scrollbar": "^8.8.4",
     "tailwindcss": "^3.4.13"
   }
